force-app/main/default/objects/Account/fields/ABR_Happened__c.field-meta.xml
<CustomField>
    <fullName>ABR_Happened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ABR Happened</label>
    <type>Checkbox</type>
</CustomField>