force-app/main/default/objects/Account/fields/ABR_Happened_Set__c.field-meta.xml
<CustomField>
    <fullName>ABR_Happened_Set__c</fullName>
    <description>Timestamp of when ABR Happened was first set to true</description>
    <label>ABR Happened Set</label>
    <type>DateTime</type>
</CustomField>