force-app/main/default/objects/Account/fields/ABR_Notes__c.field-meta.xml
<CustomField>
    <fullName>ABR_Notes__c</fullName>
    <label>ABR Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>