force-app/main/default/objects/Account/fields/ABR_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>ABR_Scheduled_Date__c</fullName>
    <label>ABR Scheduled Date</label>
    <type>Date</type>
</CustomField>