force-app/main/default/objects/Account/fields/ABR_Scheduled_Date_Set__c.field-meta.xml
<CustomField>
    <fullName>ABR_Scheduled_Date_Set__c</fullName>
    <description>Timestamp of when ABR Scheduled Date was first populated</description>
    <label>ABR Scheduled Date Set</label>
    <type>DateTime</type>
</CustomField>