force-app/main/default/objects/Account/fields/AC_Feedback__c.field-meta.xml
<CustomField>
    <fullName>AC_Feedback__c</fullName>
    <inlineHelpText>Feedback on AC for all interest levels, Purchase (why they purchased), Yes (What sparked the interest), No (Expansion on  what the missing feature was or just more details)</inlineHelpText>
    <label>AC-Feedback</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>