force-app/main/default/objects/Account/fields/AC_Interest__c.field-meta.xml
<CustomField>
    <fullName>AC_Interest__c</fullName>
    <label>AC-Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes/In Process</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Maybe/Contact Later</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Partner Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>