force-app/main/default/objects/Account/fields/AC_Not_Interested_Reason__c.field-meta.xml
<CustomField>
    <fullName>AC_Not_Interested_Reason__c</fullName>
    <label>AC-Not Interested Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AC_Interest__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Features</fullName>
            </value>
            <value>
                <fullName>Reporting Product Already</fullName>
            </value>
            <value>
                <fullName>Leaving Great Plains</fullName>
            </value>
            <value>
                <fullName>Not a Fit</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Time/Resource Constraints</fullName>
            </value>
            <value>
                <fullName>Multicurrency</fullName>
            </value>
            <value>
                <fullName>None Given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>