force-app/main/default/objects/Account/fields/Account_18_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_18_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Account 18 Id</label>
    <type>Text</type>
</CustomField>