force-app/main/default/objects/Account/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Power of 1</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>