force-app/main/default/objects/Account/fields/Account_Executive_Partner__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Partner__c</fullName>
    <formula>Partner__r.Account_Executive__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive - Partner</label>
    <type>Text</type>
</CustomField>