force-app/main/default/objects/Account/fields/Account_Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Account_Fiscal_Year_End__c</fullName>
    <label>Account Fiscal Year End</label>
    <type>Date</type>
</CustomField>