force-app/main/default/objects/Account/fields/Account_Health_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Health_Notes__c</fullName>
    <label>Account Health Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>