force-app/main/default/objects/Account/fields/Account_Id_Custom__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_Custom__c</fullName>
    <label>Account Id Custom</label>
    <length>18</length>
    <type>Text</type>
</CustomField>