force-app/main/default/objects/Account/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(  ISBLANK( Parent.Name ) , Name, Parent.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Summary</label>
    <type>Text</type>
</CustomField>