force-app/main/default/objects/Account/fields/Account_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Active__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Active?</label>
    <type>Checkbox</type>
</CustomField>