force-app/main/default/objects/Account/fields/Account_Owner_Custom__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Custom__c</fullName>
    <label>Account Owner (Custom)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>