force-app/main/default/objects/Account/fields/Account_Primary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Primary_Campaign_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>