force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
                <default>true</default>
                <label>Satisfied</label>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
            <value>
                <fullName>Triage</fullName>
            </value>
            <value>
                <fullName>Future Churn</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Moving to Business Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>