force-app/main/default/objects/Account/fields/Account_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Source__c</fullName>
    <label>Account Subsource</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lead_Subsource</valueSetName>
    </valueSet>
</CustomField>