force-app/main/default/objects/Account/fields/AccountExecutive_and_Owner_Same__c.field-meta.xml
<CustomField>
    <fullName>AccountExecutive_and_Owner_Same__c</fullName>
    <formula>OwnerId =  Partner__r.Account_Executive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountExecutive and Owner Same</label>
    <type>Checkbox</type>
</CustomField>