force-app/main/default/objects/Account/fields/Active_Partner_Margin__c.field-meta.xml
<CustomField>
    <fullName>Active_Partner_Margin__c</fullName>
    <label>Active Partner Margin</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>