force-app/main/default/objects/Account/fields/Active_Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Active_Partner_Tier__c</fullName>
    <label>Active Partner Tier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>