force-app/main/default/objects/Account/fields/adroll__ClickConversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__ClickConversion__c</fullName>
    <description>Conversion Rate For Clicks</description>
    <inlineHelpText>Conversion Rate For Clicks</inlineHelpText>
    <label>Click Conversion (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>