force-app/main/default/objects/Account/fields/adroll__Impressions_External_ID__c.field-meta.xml
<CustomField>
    <fullName>adroll__Impressions_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Impressions External ID (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>