force-app/main/default/objects/Account/fields/Analytics__c.field-meta.xml
<CustomField>
    <fullName>Analytics__c</fullName>
    <label>Analytics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Analytics</valueSetName>
    </valueSet>
</CustomField>