force-app/main/default/objects/Account/fields/Annual_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Range__c</fullName>
    <label>Annual Revenue ($ Range)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>