force-app/main/default/objects/Account/fields/Annual_Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Subscription_Amount__c</fullName>
    <label>OLD_Subscription ARR (Acct)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>