force-app/main/default/objects/Account/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>Chargebee_ARR_Enhancement_Acct__c +  Chargebee_ARR_Subscription_Acct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargebee_ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>