force-app/main/default/objects/Account/fields/ARR_MFC__c.field-meta.xml
<CustomField>
    <fullName>ARR_MFC__c</fullName>
    <formula>MRR_ROLL_UP__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR (Account)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>