force-app/main/default/objects/Account/fields/BC_Cavallo_Application_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>BC_Cavallo_Application_Request_Form__c</fullName>
    <formula>HYPERLINK(&apos;https://forms.gle/bjMpfEgarPFYqKuH7&apos;, &apos;https://forms.gle/bjMpfEgarPFYqKuH7&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Form to collect environment details to allow Partner access to our Cavallo products. To view form responses, see Cavallo&apos;s wiki https://wiki.cavallo.com/wiki/5327</inlineHelpText>
    <label>BC - Cavallo Application Request Form</label>
    <type>Text</type>
</CustomField>