force-app/main/default/objects/Account/fields/BC_New_Customer_Form1__c.field-meta.xml
<CustomField>
    <fullName>BC_New_Customer_Form1__c</fullName>
    <formula>HYPERLINK(&apos;https://forms.gle/EA2fpfMh2fdDZGtu9&apos;, &apos;https://forms.gle/EA2fpfMh2fdDZGtu9&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Form to collect the necessary customer and environment information for application provisioning. To view form responses, see Cavallo&apos;s wiki https://wiki.cavallo.com/wiki/5327</inlineHelpText>
    <label>BC - New Customer Form</label>
    <type>Text</type>
</CustomField>