force-app/main/default/objects/Account/fields/Bill_through_Partner__c.field-meta.xml
<CustomField>
    <fullName>Bill_through_Partner__c</fullName>
    <defaultValue>&quot;Direct&quot;</defaultValue>
    <label>Default Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill through Partner</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>