force-app/main/default/objects/Account/fields/Bill_Through_Partner_Approval__c.field-meta.xml
<CustomField>
    <fullName>Bill_Through_Partner_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Through Partner Approval</label>
    <type>Checkbox</type>
</CustomField>