force-app/main/default/objects/Account/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <inlineHelpText>Find models here: https://drive.google.com/u/1/open?id=1sqiiLkolyEi52KPJRudgt15TZUvYdGiw</inlineHelpText>
    <label>Business Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Builders</fullName>
            </value>
            <value>
                <fullName>Catalog Creators</fullName>
            </value>
            <value>
                <fullName>Product Producers</fullName>
            </value>
            <value>
                <fullName>Service Centered</fullName>
            </value>
            <value>
                <fullName>Project Planners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>