force-app/main/default/objects/Account/fields/CAM_2021_Account__c.field-meta.xml
<CustomField>
    <fullName>CAM_2021_Account__c</fullName>
    <label>CAM 2021 Account</label>
    <summaryFilterItems>
        <field>Opportunity.CAM_Quota_Attainment__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Existing Business</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>