force-app/main/default/objects/Account/fields/CAM_Software_Amount_2021__c.field-meta.xml
<CustomField>
    <fullName>CAM_Software_Amount_2021__c</fullName>
    <label>CAM Software Amount 2021</label>
    <summarizedField>Opportunity.CAM_Quota_Attainment__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Existing Business</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Subtype__c</field>
        <operation>notEqual</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>