force-app/main/default/objects/Account/fields/Certified_Service_Partner__c.field-meta.xml
<CustomField>
    <fullName>Certified_Service_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Service Partner</label>
    <type>Checkbox</type>
</CustomField>