force-app/main/default/objects/Account/fields/Chargebee_Active_Count__c.field-meta.xml
<CustomField>
    <fullName>Chargebee_Active_Count__c</fullName>
    <label>Chargebee Active Count</label>
    <summaryFilterItems>
        <field>chargebeeapps__CB_Subscription__c.chargebeeapps__Subscription_status__c</field>
        <operation>equals</operation>
        <value>ACTIVE</value>
    </summaryFilterItems>
    <summaryForeignKey>chargebeeapps__CB_Subscription__c.chargebeeapps__Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>