force-app/main/default/objects/Account/fields/Chargebee_ARR_Enhancement_Acct__c.field-meta.xml
<CustomField>
    <fullName>Chargebee_ARR_Enhancement_Acct__c</fullName>
    <description>Chargebee ARR Enhancement Acct</description>
    <label>Chargebee ARR Enhancement Acct</label>
    <summarizedField>chargebeeapps__CB_Subscription__c.chargebeeapps__MRR__c</summarizedField>
    <summaryFilterItems>
        <field>chargebeeapps__CB_Subscription__c.chargebeeapps__Plan_Id__c</field>
        <operation>equals</operation>
        <value>SALESPAD-FOR-GP</value>
    </summaryFilterItems>
    <summaryForeignKey>chargebeeapps__CB_Subscription__c.chargebeeapps__Company__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>