force-app/main/default/objects/Account/fields/Chargebee_ARR_Subscription_Acct__c.field-meta.xml
<CustomField>
    <fullName>Chargebee_ARR_Subscription_Acct__c</fullName>
    <description>Chargebee ARR Subscription Acct</description>
    <label>Chargebee ARR Subscription Acct</label>
    <summarizedField>chargebeeapps__CB_Subscription__c.chargebeeapps__MRR__c</summarizedField>
    <summaryFilterItems>
        <field>chargebeeapps__CB_Subscription__c.chargebeeapps__Plan_Id__c</field>
        <operation>contains</operation>
        <value>SALESPAD-SUBSCRIPTION-FOR-GP,SALESPAD-SPLA,CAVALLO-FOR-BC</value>
    </summaryFilterItems>
    <summaryForeignKey>chargebeeapps__CB_Subscription__c.chargebeeapps__Company__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>