force-app/main/default/objects/Account/fields/chargebeeapps__Active_Cb_Id__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Active_Cb_Id__c</fullName>
    <description>Active chargebee ID of subscription which has moved to the new business entity.</description>
    <inlineHelpText>Active chargebee ID of subscription which has moved to the new business entity.</inlineHelpText>
    <label>Active Cb Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>