force-app/main/default/objects/Account/fields/chargebeeapps__Auto_Collection__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Auto_Collection__c</fullName>
    <label>Auto Collection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>on</fullName>
                <color>#57F17C</color>
                <label>on</label>
            </value>
            <value>
                <fullName>off</fullName>
                <color>#FF0000</color>
                <label>off</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>