force-app/main/default/objects/Account/fields/chargebeeapps__AutoCloseInvoices__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__AutoCloseInvoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Close Invoices</label>
    <type>Checkbox</type>
</CustomField>