force-app/main/default/objects/Account/fields/chargebeeapps__CB_Id__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__CB_Id__c</fullName>
    <label>Chargebee Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>