force-app/main/default/objects/Account/fields/chargebeeapps__CB_Site__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__CB_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargebee Site</label>
    <referenceTo>chargebeeapps__CB_Sites__c</referenceTo>
    <relationshipLabel>CB Customers</relationshipLabel>
    <relationshipName>CB_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>