force-app/main/default/objects/Account/fields/chargebeeapps__Email__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Email__c</fullName>
    <label>Chargebee Email</label>
    <type>Email</type>
</CustomField>