force-app/main/default/objects/Account/fields/chargebeeapps__First_Name__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__First_Name__c</fullName>
    <label>Chargebee First Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>