force-app/main/default/objects/Account/fields/chargebeeapps__Is_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Is_Deprecated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify the account is deprecated and has been moved to the new business entity.</description>
    <label>Is Deprecated</label>
    <type>Checkbox</type>
</CustomField>