force-app/main/default/objects/Account/fields/chargebeeapps__Is_Synced__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Is_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synced</label>
    <type>Checkbox</type>
</CustomField>