force-app/main/default/objects/Account/fields/chargebeeapps__Locale__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Locale__c</fullName>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>en-AU</fullName>
                <label>English (Australia)</label>
            </value>
            <value>
                <fullName>en-CA</fullName>
                <label>English (Canada)</label>
            </value>
            <value>
                <fullName>en-IN</fullName>
                <label>English (India)</label>
            </value>
            <value>
                <fullName>en-IE</fullName>
                <label>English (Ireland)</label>
            </value>
            <value>
                <fullName>en-MT</fullName>
                <label>English (Malta)</label>
            </value>
            <value>
                <fullName>en-NZ</fullName>
                <label>English (New Zealand)</label>
            </value>
            <value>
                <fullName>en-PH</fullName>
                <label>English (Philippines)</label>
            </value>
            <value>
                <fullName>en-SG</fullName>
                <label>English (Singapore)</label>
            </value>
            <value>
                <fullName>en-ZA</fullName>
                <label>English (South Africa)</label>
            </value>
            <value>
                <fullName>en-GB</fullName>
                <label>English (United Kingdom)</label>
            </value>
            <value>
                <fullName>en-US</fullName>
                <label>English (United States)</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>fr-BE</fullName>
                <label>French (Belgium)</label>
            </value>
            <value>
                <fullName>fr-CA</fullName>
                <label>French (Canada)</label>
            </value>
            <value>
                <fullName>fr-FR</fullName>
                <label>French (France)</label>
            </value>
            <value>
                <fullName>fr-LU</fullName>
                <label>French (Luxembourg)</label>
            </value>
            <value>
                <fullName>fr-CH</fullName>
                <label>French (Switzerland)</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>de-AT</fullName>
                <label>German (Austria)</label>
            </value>
            <value>
                <fullName>de-DE</fullName>
                <label>German (Germany)</label>
            </value>
            <value>
                <fullName>de-GR</fullName>
                <label>German (Greece)</label>
            </value>
            <value>
                <fullName>de-LU</fullName>
                <label>German (Luxembourg)</label>
            </value>
            <value>
                <fullName>de-CH</fullName>
                <label>German (Switzerland)</label>
            </value>
            <value>
                <fullName>it</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>it-IT</fullName>
                <label>Italian (Italy)</label>
            </value>
            <value>
                <fullName>it-CH</fullName>
                <label>Italian (Switzerland)</label>
            </value>
            <value>
                <fullName>pt</fullName>
                <label>Portuguese</label>
            </value>
            <value>
                <fullName>pt-BR</fullName>
                <label>Portuguese (Brazil)</label>
            </value>
            <value>
                <fullName>pt-PT</fullName>
                <label>Portuguese (Portugal)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>