force-app/main/default/objects/Account/fields/chargebeeapps__Net_Term_Days__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Net_Term_Days__c</fullName>
    <label>Net Term Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>