force-app/main/default/objects/Account/fields/chargebeeapps__Payment_Method_Status__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Payment_Method_Status__c</fullName>
    <label>Payment Method Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>valid</fullName>
                <label>VALID</label>
            </value>
            <value>
                <fullName>expiring</fullName>
                <label>EXPIRING</label>
            </value>
            <value>
                <fullName>expired</fullName>
                <label>EXPIRED</label>
            </value>
            <value>
                <fullName>invalid</fullName>
                <label>INVALID</label>
            </value>
            <value>
                <fullName>pending_verification</fullName>
                <label>PENDING_VERIFICATION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>